# voxel

./: Cargo.toml  rgen.spv
crates/app/: Cargo.toml
crates/app/src/: app.rs  camera.rs  gui.rs  lib.rs  utils.rs
crates/gui/: Cargo.toml
crates/vulkan/: Cargo.toml
crates/vulkan/src/: instance.rs  surface.rs  utils.rs
crates/vulkan/src/pipeline/: compute.rs  graphics.rs  layout.rs
shaders/: closesthit.rchit  miss.rmiss  raygen.rgen  raygen.rgen.spv
src/: app.rs  camera.rs  chunk.rs  generation.rs  generator.rs  main.rs  mesh.rs  quad.rs  sky_dome.rs  transform.rs  ui.rs  utils.rs  world.rs
src/chunk/: mesh.rs
src/generation/: hills.rs  mountains.rs  plains.rs  rivers.rs
src/generator/: hills.rs  mountains.rs  plains.rs  rivers.rs
src/shaders/: shader.frag  shader.vert  sky.frag  sky.vert  voxel.frag  voxel.vert
