[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
log.workspace = true

ash = "0.38.0"
ash-window = "0.13.0"
gpu-allocator = { version = "0.27.0", default-features = false, features = [
    "vulkan",
] }
raw-window-handle = "0.6.2"
thiserror = "1.0.63"
